# rust-irc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  event.rs  main.rs  ui.rs  ui.txt
client/src/app/: app.rs
client/src/components/: input.rs  message.rs  message_box.rs  mod.rs
client/src/pages/: mod.rs
client/src/pages/home_page/: home_page.rs
client/src/pages/login_page/: login_page.rs
client/src/state/: action.rs  state.rs
client/src/ui_management/: ui_manager.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/room/: room.rs
server/: Cargo.toml  users.db-wal
server/src/: main.rs  server.rs
server/website-files/: index.html
server/website-files/assets/: Tooltip-B8gZJWmn-BjlW7soV.js  about-DE-7vxz2.js  entry.client-C-KSjJBw.js  home-CYnk1Nzg.js  index-CLOTiFb2-CEpX17L7.js  jsx-runtime-Cpd2UDyi.js  manifest-44046c7a.js  react-dom-CDyKhI3Q.js  root-Bg9KXUji.js  root-ByOAKU-3.css
src/: application.rs  client.rs  main.rs  server.rs
