[package]
name = "chatserver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "server/src/main.rs"
doc = true

[[bin]]
name = "client"
path = "client/src/main.rs"
doc = true

[lib]
name = "common"
path = "common/src/lib.rs"
doc = true

[workspace]
members = ["server", "client", "common"]

[dependencies]
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"