[package]
name = "chatserver"
version = "1.0.0"
edition = "2024"

[workspace]
members = ["client", "server", "common"]

[profile.release]
opt-level = "z"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.