[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = "1.52.3"
sha3 = "0.12.0"
cliclack = "0.5.4"
clavis = { git = "https://github.com/pyrohost/clavis" }
ratatui = "0.30.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tui-input = { version = "*", features = ["crossterm"], default-features = false }
color-eyre = "0.6.3"
futures = "0.3.32"