[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = "1.52.3"
sha3 = "0.12.0"
clavis = { git = "https://github.com/pyrohost/clavis" }
ratatui = "0.30.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tui-input = { version = "*", features = ["crossterm"], default-features = false }
color-eyre = "0.6.3"
futures = "0.3.32"


[profile.release]
opt-level = "z"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true      