[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
rand = "0.10.1"
tokio = { version = "1", features = ["full"] }
clavis = { git = "https://github.com/pyrohost/clavis" }
cliclack = "0.5.4"
regex = "1.12.3"


[profile.release]
opt-level = "z"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true